Remove the local storage object from the source spoke in GUI
Use the Storage module instead.

--- a/pyanaconda/ui/gui/spokes/installation_source.glade
+++ b/pyanaconda/ui/gui/spokes/installation_source.glade
@@ -196,8 +196,8 @@
   </object>
   <object class="GtkListStore" id="partitionStore">
     <columns>
-      <!-- column-name device -->
-      <column type="PyObject"/>
+      <!-- column-name device name -->
+      <column type="gchararray"/>
       <!-- column-name description -->
       <column type="gchararray"/>
     </columns>
