--- a/pyanaconda/ui/gui/spokes/storage.glade
+++ b/pyanaconda/ui/gui/spokes/storage.glade
@@ -806,6 +806,7 @@
                                         <property name="xalign">0</property>
                                         <property name="active">True</property>
                                         <property name="draw_indicator">True</property>
+                                        <signal name="toggled" handler="on_method_toggled" swapped="no"/>
                                       </object>
                                       <packing>
                                         <property name="expand">False</property>
@@ -824,7 +825,7 @@
                                         <property name="active">True</property>
                                         <property name="draw_indicator">True</property>
                                         <property name="group">autopartRadioButton</property>
-                                        <signal name="toggled" handler="on_custom_toggled" swapped="no"/>
+                                        <signal name="toggled" handler="on_method_toggled" swapped="no"/>
                                       </object>
                                       <packing>
                                         <property name="expand">False</property>
@@ -843,7 +844,7 @@
                                         <property name="active">True</property>
                                         <property name="draw_indicator">True</property>
                                         <property name="group">autopartRadioButton</property>
-                                        <signal name="toggled" handler="on_custom_toggled" swapped="no"/>
+                                        <signal name="toggled" handler="on_method_toggled" swapped="no"/>
                                       </object>
                                       <packing>
                                         <property name="expand">False</property>
