--- a/pyanaconda/ui/gui/spokes/custom_storage.glade
+++ b/pyanaconda/ui/gui/spokes/custom_storage.glade
@@ -5,6 +5,8 @@
   <requires lib="AnacondaWidgets" version="3.0"/>
   <object class="GtkListStore" id="containerStore">
     <columns>
+      <!-- column-name name -->
+      <column type="gchararray"/>
       <!-- column-name description -->
       <column type="gchararray"/>
       <!-- column-name freeSpace -->
