--- a/pyanaconda/ui/gui/spokes/lib/custom_storage_helpers.glade
+++ b/pyanaconda/ui/gui/spokes/lib/custom_storage_helpers.glade
@@ -531,7 +531,7 @@ use.  Try something else?</property>
     <data>
       <row>
         <col id="0" translatable="yes">None</col>
-        <col id="1" />
+        <col id="1"></col>
       </row>
       <row>
         <col id="0" translatable="yes">Single</col>
