Remove kickstart sources from GUI
Use the DBus sources instead.

--- a/pyanaconda/ui/gui/spokes/installation_source.glade
+++ b/pyanaconda/ui/gui/spokes/installation_source.glade
@@ -827,9 +827,9 @@
                                         <property name="can_focus">False</property>
                                         <property name="halign">start</property>
                                         <items>
-                                          <item id="url" translatable="yes">repository URL</item>
-                                          <item id="mirrorlist" translatable="yes">mirrorlist</item>
-                                          <item id="metalink" translatable="yes">metalink</item>
+                                          <item id="BASEURL" translatable="yes">repository URL</item>
+                                          <item id="MIRRORLIST" translatable="yes">mirrorlist</item>
+                                          <item id="METALINK" translatable="yes">metalink</item>
                                         </items>
                                       </object>
                                       <packing>
